[package]
name = "websocket"
version = "0.1.0"
authors = ["Oussama <md.oussama@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = { git = "https://github.com/koute/stdweb" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies.ws]
version = "*"
features = ["ssl"]